--- a/lifefit_cliente/style/home_style.css
+++ b/lifefit_cliente/style/home_style.css
@@ -27,9 +27,6 @@ header {
     background-color: black;
     width: 100%;
     color: white;
-}
-
-header {
     display: flex !important;
     justify-content: space-between;
     align-items: center;
@@ -63,9 +60,7 @@ header img {
 }
 
 .titulo,
-.eslogan,
-#crear_rutina,
-.titulo_modal {
+.eslogan {
     font-family: 'primetime';
 }
 
@@ -78,6 +73,16 @@ header img {
     font-weight: bold;
 }
 
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15px;
+    background-color: #f9f9f9;
+}
+
 .subtitulo {
     background-color: black;
     color: white;
@@ -85,84 +90,12 @@ header img {
     font-size: 100px;
 }
 
-.menu_header ul {
-    list-style: none;
-    text-align: center;
-}
+.ejercicios {
 
-.menu_header ul li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-.menu_header ul li:last-child {
-    margin-right: 0;
-}
-
-.menu_header ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.menu_header ul li,
-.menu_header ul li a {
-    position: relative;
-}
-
-.menu_header ul li a::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    width: 0;
-    height: 2px;
-    background-color: white;
-    transition: width 0.3s;
-}
-
-.menu_header ul li a:hover::after {
-    width: 100%;
-}
-
-.menu_header ul li a:hover {
-    font-size: 105%;
-}
-
-main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 5px;
-    background-color: #f9f9f9;
-}
-
-.contenedor_flecha {
-    width: 100%;
-    padding-left: 15px;
-}
-
-.material-symbols-outlined {
-    font-size: 40px !important;
-}
-
-
-.enlace_flecha {
-    text-decoration: none;
-    color: black;
-}
-
-.enlace_flecha:hover {
-    color: #333;
-}
-
-.rutina {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    place-items: center;
 }
 
 .tarjeta {
@@ -171,7 +104,8 @@ main {
     flex-direction: column;
     border: 1px solid #ccc;
     border-radius: 15px 15px;
-    width: 50%;
+    width: 80%;
+    height: 500px;
     align-items: center;
     gap: 10px;
     padding: 10px;
@@ -196,54 +130,86 @@ main {
     display: block;
 }
 
-.form-group {
-    display: flex;
-    padding-bottom: 10px;
-}
-
 .equipamientoEjercicio,
-.nombreMusculo,
-.seriesEjercicio,
-.repeticionesEjercicio {
+.nombreMusculo {
     border-top: 1px solid #ccc;
     padding-top: 5px;
     font-size: 15px;
 }
 
-table {
-    width: 85%;
-    margin: 15px 0 15px 0;
-}
-
-thead {
+.menu {
     background-color: #333;
+    border-radius: 0 0 10px 10px;
+}
+
+.menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    font-family: 'primetime';
+}
+
+.menu_header ul {
+    list-style: none;
+    text-align: center;
+}
+
+.menu ul li,
+.menu_header ul li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.menu ul li:last-child,
+.menu_header ul li:last-child {
+    margin-right: 0;
+}
+
+.menu_header ul li a {
     color: white;
-    font-weight: bold;
-    font-size: 15px;
-    padding: 10px;
+    text-decoration: none;
 }
 
-td {
-    padding: 10px;
-    text-align: center;
-    width: 25%;
+.menu ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: block;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-table,
-tr,
-td {
-    border: 1px solid #ccc;
-    border-collapse: collapse;
+.menu ul li a:hover {
+    transform: translateY(3px);
+    background-color: #555;
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
-input {
-    text-align: center;
+.menu_header ul li,
+.menu_header ul li a {
+    position: relative;
 }
 
+.menu_header ul li a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition: width 0.3s;
+}
+
+.menu_header ul li a:hover::after {
+    width: 100%;
+}
+
+.menu_header ul li a:hover {
+
+    font-size: 105%;
+}
 @media only screen and (min-width: 400px) and (max-width: 600px) {
-    body{
-        overflow-x: hidden;
-    }
     header {
         display: flex !important;
         flex-direction: column;
@@ -255,21 +221,9 @@ input {
     header>img{
         display: none;
     }
-    .main,.rutina{
-        width: 100%;
-    }
-    .rutina{
+    .ejercicios{
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 15px;
     }
-    .tarjeta{
-        width: 90%;
-    }
-    .tarjeta table{
-        width: 70%;
-        overflow-x: auto;
-    }
+    
 }
