--- a/lifefit_cliente/style/style.css
+++ b/lifefit_cliente/style/style.css
@@ -1,18 +1,20 @@
 @font-face {
     font-family: 'primetime';
     src: url('../fonts/primetime.ttf') format('truetype');
-  }
+}
 
-*{
+* {
     margin: 0;
     padding: 0;
     border: 0;
 
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     display: none;
 }
-body{
+
+body {
     overflow-x: hidden;
     width: 100%;
     height: 100%;
@@ -21,112 +23,7 @@ body{
     gap: 50px;
 }
 
-header, footer{
-    background-color: black;
-    width: 100%;
-    color: white;
-}
-header{
-    display: flex !important;
-    justify-content: space-between;
-    align-items: center;
-    height: 10%;
-    padding: 15px;
-}
-header img{
-    height: 100px;
-
-}
-header img{
-    padding-right: 25px;
-}
-.izquierda{
-    display: flex;
-}
-.letra{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 15px;
-}
-.eslogan{
-    font-size: smaller;
-}
-
-.titulo, .eslogan{
-    font-family: 'primetime';
-}
-.menu_header{
-    display: flex;
-    align-items: end;
-    padding-left: 10px;
-    margin: 0;
-    font-size: large;
-    font-weight: bold;
-}
-main{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 15px;
-    background-color: #f9f9f9;
-}
-
-.subtitulo{
-    background-color: black;
-    color: white;
-    padding: 20px;
-    font-size: 100px;
-}
-.ejercicios{
-
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-    place-items: center;
-}
-.tarjeta{
-    display: flex;
-    background-color: white;
-    flex-direction: column;
-    border: 1px solid #ccc;
-    border-radius: 15px 15px;
-    width: 80%;
-    height: 500px;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
-.tarjeta .contenedorContenido{
-    padding-top: 10px;
-    height: 35%;
-}
-
-.nombreEjercicio{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.imagenEjercicio{
-    width: 300px;
-    height: 300px;
-    display: block;
-}
-
-.equipamientoEjercicio, .nombreMusculo{
-    border-top: 1px solid #ccc;
-    padding-top: 5px;
-    font-size: 15px;
-}
-
-
-.login{
+.login {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -136,75 +33,140 @@ main{
     font-family: 'primetime';
 }
 
-form>h3{
+#name,
+#password,
+#user,
+#nueva_password {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+form>h3 {
     text-align: center;
 }
-#contenedor-boton{
+
+#contenedor-boton {
     display: flex;
     justify-content: right;
 }
-.registrarse{
+
+.registrarse {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 10px;
 }
-.menu {
-  background-color: #333; 
-}
-.menu ul{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-align: center;
-  font-family: 'primetime';
-}
-.menu_header ul{
-    list-style: none;
-    text-align: center;
-}
-.menu ul li, .menu_header ul li{
-  display: inline-block;
-  margin-right: 20px;
-}
-.menu ul li:last-child, .menu_header ul li:last-child {
-  margin-right: 0;
-}
-.menu_header ul li a{
-    color: white;
-    text-decoration: none;
-}
-.menu ul li a {
-  color: white;
-  text-decoration: none;
-  padding: 10px 20px;
-  display: block;
-  transition: transform 0.3s ease, background-color 0.3s ease;
-}
-.menu ul li a:hover {
-  transform: translateY(3px); 
-  background-color: #555; 
-}
-.menu_header ul li, .menu_header ul li a{
-    position: relative;
+
+#password {
+    color: black;
 }
 
-.menu_header ul li a::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -3px; /* Controla la posición vertical del subrayado */
-    width: 0;
-    height: 2px; /* Ajusta el grosor del subrayado según sea necesario */
-    background-color: white; /* Color del subrayado */
-    transition: width 0.3s; /* Agrega una transición suave para el ancho del subrayado */
+.modal_registro {
+    display: none;
+    position: fixed;
+    overflow-y: auto;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 2;
+    width: 50%;
+    margin: auto;
+    padding: 20px;
+    background-color: white;
+    border: 3px solid #ccc;
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'primetime';
 }
-.menu_header ul li a:hover::after {
+
+#user,
+#nueva_password {
+    width: 50%;
+
+}
+
+#boton_registro {
     width: 100%;
-}
-.menu_header ul li a:hover{
-    /* transform: scale(1.2); */
-    font-size: 105%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+#usuario_registro,
+#password_registro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.ventana_borrosa {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.55);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.header {
+    background-color: black;
+    width: 100%;
+    color: white;
+    display: flex !important;
+    justify-content: space-between;
+    align-items: center;
+    height: 10%;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.header img {
+    height: 100px;
+
+}
+
+.header img {
+    padding-right: 25px;
+}
+
+.izquierda {
+    display: flex;
+    width: 70%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.letra {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15px;
+}
+
+.eslogan {
+    font-size: smaller;
+}
+
+.titulo,
+.eslogan {
+    font-family: 'primetime';
+}
+
+#formularioRegistro{
+    padding-top: 10px;
+}
+
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+}
